k8s/apigateway/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: auth-service
spec:
  hosts:
    - "*"
  gateways:
    - ingress
  http: # Обратите внимание на порядок маршрутов, маршрут / идет последним, иначе все запросы будут идти именно в него
    - name: "auth-whitelisted" # Указываем имя для применения EnvoyFilter
      match:
        - uri:
            prefix: /auth # Все запросы к /auth/ направляем к auth-service
      rewrite:
        uri: /api/v1/auth # Перезаписываем префикс с /auth/ на /, чтобы запросы шли в корень сервиса
      route:
        - destination:
            port:
              number: 80
            host: auth-service.userservice.svc.cluster.local
    - match:
        - uri:
            prefix: /user
      rewrite:
        uri: /api/v1/user
      route:
        - destination:
            port:
              number: 80
            host: echoserver.userservice.svc.cluster.local
