k8s/apigateway/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: userservice-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "arch.homework"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: userservice-vs
spec:
  hosts:
    - "arch.homework"
  gateways:
    - userservice-gateway
  http: # Обратите внимание на порядок маршрутов, маршрут / идет последним, иначе все запросы будут идти именно в него
    - match:
        - uri:
            exact: "/user"
      rewrite:
        uri: "/api/v1/user"
      route:
        - destination:
            port:
              number: 80
            host: userservice.userservice.svc.cluster.local
    - name: "auth-whitelisted" # Указываем имя для применения EnvoyFilter
      match:
        - uri:
            prefix: "/"
      rewrite:
        uri: "/api/v1/"
      route:
        - destination:
            port:
              number: 80
            host: userservice-authservice.userservice.svc.cluster.local
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: "auth-ap"
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  action: ALLOW
  rules:
    - to:
        - operation:
            methods: ["POST"]
            paths: ["/signup*"] # Разрешаем доступ к /auth всем запросам
    - to:
      - operation:
          methods: ["POST"]
          paths: [ "/auth*" ] # Разрешаем доступ к /auth всем запросам
    - to:
        - operation:
            methods: [ "POST" ]
            paths: [ "/login*" ] # Разрешаем доступ к /auth всем запросам
    - to:
        - operation:
            methods: ["GET", "DELETE", "PATCH"]
            paths: ["/user*"]
      when:
        - key: request.auth.claims[iss] # Разрешаем доступ к /admin запросам, с JWT токеном внутри которого есть группа admin
          values: ["http://userservice-authservice.userservice.svc.cluster.local"]
    - from:
        - source:
            requestPrincipals: [ "*" ] # Запрещаем доступ к остальным ресурсам для запросов без JWT
      to:
        - operation:
            notPaths: ["/auth*", "/signup*","/login*", "/user*"]

---
